# src/domain/entity/Book.ts
@@ -7,6 +7,8 @@ export const BOOK_SCHEMA = z.object({
 	author: z.string(),
 	published_at: dateStringOrDate,
 	created_at: dateStringOrDate,
+	average_rating: z.number().default(0),
+	review_count: z.number().default(0),
 });
 
 export type Book = z.infer<typeof BOOK_SCHEMA>;
